5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4254/executions/1674_1105.log
== TEST (2019-04-24 22:37:00) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Digite o nome do brasão: ").upper()
print(b)


-- OUTPUT:
LULA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 22:37:28) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Digite o nome do brasão: ".upper())
print(b)


-- OUTPUT:
DIGITE O NOME DO BRASÃO: lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 22:37:41) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Digite o nome do brasao: ".upper())
print(b)


-- OUTPUT:
DIGITE O NOME DO BRASAO: lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 22:37:56) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Digite o nome do brasao: ").upper()
print(b)


-- OUTPUT:
LULA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 22:38:21) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Digite o nome do brasao: ").lower()
print(b)


-- OUTPUT:
lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 22:48:43) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Digite o nome do brasao: ").lower()

if(b != "lobo" and b != "leao" and b != "veado" and b != "dragao" and b != "rosa" and b != "sol" and b != "lula" and b != "esfolado" and b != "turta"):
	print("Entrada: ", b)
	print("Brasao invalido")
elif(b=="lobo"):
	print("Entrada: ", b)
	print("Casa: Stark")
elif(b=="leao"):
	print("Entrada: ", b)
	print("Casa: Lannister")
elif(b=="veado"):
	print("Entrada: ", b)
	print("Casa: Baratheon")
elif(b=="dragao"):
	print("Entrada: ", b)
	print("Casa: Tararyen"):
elif(b=="rosa"):
	print("Entrada: ", b)
	print("Casa: Tyrell")
elif(b=="lula"):
	print("Entrada: ", b)
	print("Casa: Greyjoy")
elif(b=="esfolado"):
	print("Entrada: ", b)
	print("Casa: Bolton")
elif(b=="turta"):
	print("Entrada: ", b)
	print("Casa: Tully")


-- ERROR:
File "XXXX", line 19
    print("Casa: Tararyen"):
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 22:49:13) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Digite o nome do brasao: ").lower()

if(b != "lobo" and b != "leao" and b != "veado" and b != "dragao" and b != "rosa" and b != "sol" and b != "lula" and b != "esfolado" and b != "turta"):
	print("Entrada: ", b)
	print("Brasao invalido")
elif(b=="lobo"):
	print("Entrada: ", b)
	print("Casa: Stark")
elif(b=="leao"):
	print("Entrada: ", b)
	print("Casa: Lannister")
elif(b=="veado"):
	print("Entrada: ", b)
	print("Casa: Baratheon")
elif(b=="dragao"):
	print("Entrada: ", b)
	print("Casa: Tararyen")
elif(b=="rosa"):
	print("Entrada: ", b)
	print("Casa: Tyrell")
elif(b=="lula"):
	print("Entrada: ", b)
	print("Casa: Greyjoy")
elif(b=="esfolado"):
	print("Entrada: ", b)
	print("Casa: Bolton")
elif(b=="turta"):
	print("Entrada: ", b)
	print("Casa: Tully")


-- OUTPUT:
Entrada:  lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 22:49:22) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Digite o nome do brasao: ").lower()

if(b != "lobo" and b != "leao" and b != "veado" and b != "dragao" and b != "rosa" and b != "sol" and b != "lula" and b != "esfolado" and b != "turta"):
	print("Entrada: ", b)
	print("Brasao invalido")
elif(b=="lobo"):
	print("Entrada: ", b)
	print("Casa: Stark")
elif(b=="leao"):
	print("Entrada: ", b)
	print("Casa: Lannister")
elif(b=="veado"):
	print("Entrada: ", b)
	print("Casa: Baratheon")
elif(b=="dragao"):
	print("Entrada: ", b)
	print("Casa: Tararyen")
elif(b=="rosa"):
	print("Entrada: ", b)
	print("Casa: Tyrell")
elif(b=="lula"):
	print("Entrada: ", b)
	print("Casa: Greyjoy")
elif(b=="esfolado"):
	print("Entrada: ", b)
	print("Casa: Bolton")
elif(b=="turta"):
	print("Entrada: ", b)
	print("Casa: Tully")


-- EXECUTION TIME:
0.174916
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa: Tararyen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 22:49:29) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Digite o nome do brasao: ").lower()

if(b != "lobo" and b != "leao" and b != "veado" and b != "dragao" and b != "rosa" and b != "sol" and b != "lula" and b != "esfolado" and b != "turta"):
	print("Entrada: ", b)
	print("Brasao invalido")
elif(b=="lobo"):
	print("Entrada: ", b)
	print("Casa: Stark")
elif(b=="leao"):
	print("Entrada: ", b)
	print("Casa: Lannister")
elif(b=="veado"):
	print("Entrada: ", b)
	print("Casa: Baratheon")
elif(b=="dragao"):
	print("Entrada: ", b)
	print("Casa: Tararyen")
elif(b=="rosa"):
	print("Entrada: ", b)
	print("Casa: Tyrell")
elif(b=="lula"):
	print("Entrada: ", b)
	print("Casa: Greyjoy")
elif(b=="esfolado"):
	print("Entrada: ", b)
	print("Casa: Bolton")
elif(b=="turta"):
	print("Entrada: ", b)
	print("Casa: Tully")


-- OUTPUT:
Entrada:  lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 22:49:49) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Digite o nome do brasao: ").lower()

if(b != "lobo" and b != "leao" and b != "veado" and b != "dragao" and b != "rosa" and b != "sol" and b != "lula" and b != "esfolado" and b != "turta"):
	print("Entrada: ", b)
	print("Brasao invalido")
elif(b=="lobo"):
	print("Entrada: ", b)
	print("Casa: Stark")
elif(b=="leao"):
	print("Entrada: ", b)
	print("Casa: Lannister")
elif(b=="veado"):
	print("Entrada: ", b)
	print("Casa: Baratheon")
elif(b=="dragao"):
	print("Entrada: ", b)
	print("Casa: Tararyen")
elif(b=="rosa"):
	print("Entrada: ", b)
	print("Casa: Tyrell")
elif(b=="lula"):
	print("Entrada: ", b)
	print("Casa: Greyjoy")
elif(b=="esfolado"):
	print("Entrada: ", b)
	print("Casa: Bolton")
elif(b=="turta"):
	print("Entrada: ", b)
	print("Casa: Tully")


-- OUTPUT:
Entrada:  lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 22:50:22) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Digite o nome do brasao: ").lower()

if(b != "lobo" and b != "leao" and b != "veado" and b != "dragao" and b != "rosa" and b != "sol" and b != "lula" and b != "esfolado" and b != "turta"):
	print("Entrada: ",b)
	print("Brasao invalido")
elif(b=="lobo"):
	print("Entrada: ",b)
	print("Casa: Stark")
elif(b=="leao"):
	print("Entrada: ",b)
	print("Casa: Lannister")
elif(b=="veado"):
	print("Entrada: ",b)
	print("Casa: Baratheon")
elif(b=="dragao"):
	print("Entrada: ",b)
	print("Casa: Tararyen")
elif(b=="rosa"):
	print("Entrada: ",b)
	print("Casa: Tyrell")
elif(b=="lula"):
	print("Entrada: ",b)
	print("Casa: Greyjoy")
elif(b=="esfolado"):
	print("Entrada: ",b)
	print("Casa: Bolton")
elif(b=="turta"):
	print("Entrada: ",b)
	print("Casa: Tully")


-- OUTPUT:
Entrada:  lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 22:50:31) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Digite o nome do brasao: ").lower()

if(b != "lobo" and b != "leao" and b != "veado" and b != "dragao" and b != "rosa" and b != "sol" and b != "lula" and b != "esfolado" and b != "turta"):
	print("Entrada: ",b)
	print("Brasao invalido")
elif(b=="lobo"):
	print("Entrada: ",b)
	print("Casa: Stark")
elif(b=="leao"):
	print("Entrada: ",b)
	print("Casa: Lannister")
elif(b=="veado"):
	print("Entrada: ",b)
	print("Casa: Baratheon")
elif(b=="dragao"):
	print("Entrada: ",b)
	print("Casa: Tararyen")
elif(b=="rosa"):
	print("Entrada: ",b)
	print("Casa: Tyrell")
elif(b=="lula"):
	print("Entrada: ",b)
	print("Casa: Greyjoy")
elif(b=="esfolado"):
	print("Entrada: ",b)
	print("Casa: Bolton")
elif(b=="turta"):
	print("Entrada: ",b)
	print("Casa: Tully")


-- EXECUTION TIME:
0.130097
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa: Tararyen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 22:51:26) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Digite o nome do brasao: ").lower()

if(b != "lobo" and b != "leao" and b != "veado" and b != "dragao" and b != "rosa" and b != "sol" and b != "lula" and b != "esfolado" and b != "turta"):
	print("Entrada: ",b)
	print("Brasao invalido")
elif(b=="lobo"):
	print("Entrada: ",b)
	print("Casa: Stark")
elif(b=="leao"):
	print("Entrada: ",b)
	print("Casa: Lannister")
elif(b=="veado"):
	print("Entrada: ",b)
	print("Casa: Baratheon")
elif(b=="dragao"):
	print("Entrada: ",b)
	print("Casa: Tararyen")
elif(b=="rosa"):
	print("Entrada: ",b)
	print("Casa: Tyrell")
elif(b=="lula"):
	print("Entrada: ",b)
	print("Casa: Greyjoy")
elif(b=="esfolado"):
	print("Entrada: ",b)
	print("Casa: Bolton")
elif(b=="turta"):
	print("Entrada: ",b)
	print("Casa: Tully")


-- OUTPUT:
Entrada:  lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 22:51:58) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Digite o nome do brasao: ").lower()

if(b != "lobo" and b != "leao" and b != "veado" and b != "dragao" and b != "rosa" and b != "sol" and b != "lula" and b != "esfolado" and b != "turta"):
	print("Entrada: ",b)
	print("Brasao invalido")
elif(b=="lobo"):
	print("Entrada: ",b)
	print("Casa: Stark")
elif(b=="leao"):
	print("Entrada: ",b)
	print("Casa: Lannister")
elif(b=="veado"):
	print("Entrada: ",b)
	print("Casa: Baratheon")
elif(b=="dragao"):
	print("Entrada: ",b)
	print("Casa: Tararyen")
elif(b=="rosa"):
	print("Entrada: ",b)
	print("Casa: Tyrell")
elif(b=="lula"):
	print("Entrada: ",b)
	print("Casa: Greyjoy")
elif(b=="esfolado"):
	print("Entrada: ",b)
	print("Casa: Bolton")
else(b=="turta"):
	print("Entrada: ",b)
	print("Casa: Tully")


-- ERROR:
File "XXXX", line 29
    else(b=="turta"):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 22:54:31) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Digite o nome do brasao: ").lower()

if(b != "lobo" and b != "leao" and b != "veado" and b != "dragao" and b != "rosa" and b != "sol" and b != "lula" and b != "esfolado" and b != "turta"):
	print("Entrada: ",b)
	print("Brasao invalido")
elif(b=="lobo"):
	print("Entrada: ",b)
	print("Casa: Stark")
elif(b=="leao"):
	print("Entrada: ",b)
	print("Casa: Lannister")
elif(b=="veado"):
	print("Entrada: ",b)
	print("Casa: Baratheon")
elif(b=="dragao"):
	print("Entrada: ",b)
	print("Casa: Tararyen")
elif(b=="rosa"):
	print("Entrada: ",b)
	print("Casa: Tyrell")
elif(b=="lula"):
	print("Entrada: ",b)
	print("Casa: Greyjoy")
elif(b=="esfolado"):
	print("Entrada: ",b)
	print("Casa: Bolton")
elif(b=="turta"):
	print("Entrada: ",b)
	print("Casa: Tully")


-- EXECUTION TIME:
0.211335
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa: Tararyen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 22:54:34) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Digite o nome do brasao: ").lower()

if(b != "lobo" and b != "leao" and b != "veado" and b != "dragao" and b != "rosa" and b != "sol" and b != "lula" and b != "esfolado" and b != "turta"):
	print("Entrada: ",b)
	print("Brasao invalido")
elif(b=="lobo"):
	print("Entrada: ",b)
	print("Casa: Stark")
elif(b=="leao"):
	print("Entrada: ",b)
	print("Casa: Lannister")
elif(b=="veado"):
	print("Entrada: ",b)
	print("Casa: Baratheon")
elif(b=="dragao"):
	print("Entrada: ",b)
	print("Casa: Tararyen")
elif(b=="rosa"):
	print("Entrada: ",b)
	print("Casa: Tyrell")
elif(b=="lula"):
	print("Entrada: ",b)
	print("Casa: Greyjoy")
elif(b=="esfolado"):
	print("Entrada: ",b)
	print("Casa: Bolton")
elif(b=="turta"):
	print("Entrada: ",b)
	print("Casa: Tully")


-- OUTPUT:
Entrada:  lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 22:55:24) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Digite o nome do brasao: ").lower()

if(b != "lobo" and b != "leao" and b != "veado" and b != "dragao" and b != "rosa" and b != "sol" and b != "lula" and b != "esfolado" and b != "turta"):
	print("Entrada:",b)
	print("Brasao invalido")
elif(b=="lobo"):
	print("Entrada:",b)
	print("Casa: Stark")
elif(b=="leao"):
	print("Entrada:",b)
	print("Casa: Lannister")
elif(b=="veado"):
	print("Entrada:",b)
	print("Casa: Baratheon")
elif(b=="dragao"):
	print("Entrada:",b)
	print("Casa: Tararyen")
elif(b=="rosa"):
	print("Entrada:",b)
	print("Casa: Tyrell")
elif(b=="lula"):
	print("Entrada:",b)
	print("Casa: Greyjoy")
elif(b=="esfolado"):
	print("Entrada:",b)
	print("Casa: Bolton")
elif(b=="turta"):
	print("Entrada:",b)
	print("Casa: Tully")


-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 22:55:34) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Digite o nome do brasao: ").lower()

if(b != "lobo" and b != "leao" and b != "veado" and b != "dragao" and b != "rosa" and b != "sol" and b != "lula" and b != "esfolado" and b != "turta"):
	print("Entrada:",b)
	print("Brasao invalido")
elif(b=="lobo"):
	print("Entrada:",b)
	print("Casa: Stark")
elif(b=="leao"):
	print("Entrada:",b)
	print("Casa: Lannister")
elif(b=="veado"):
	print("Entrada:",b)
	print("Casa: Baratheon")
elif(b=="dragao"):
	print("Entrada:",b)
	print("Casa: Tararyen")
elif(b=="rosa"):
	print("Entrada:",b)
	print("Casa: Tyrell")
elif(b=="lula"):
	print("Entrada:",b)
	print("Casa: Greyjoy")
elif(b=="esfolado"):
	print("Entrada:",b)
	print("Casa: Bolton")
elif(b=="turta"):
	print("Entrada:",b)
	print("Casa: Tully")


-- EXECUTION TIME:
0.128989
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Tararyen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 22:57:02) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Digite o nome do brasao: ").lower()

if(b != "lobo" and b != "leao" and b != "veado" and b != "dragao" and b != "rosa" and b != "sol" and b != "lula" and b != "esfolado" and b != "turta"):
	print("Entrada: ", b)
	print("Brasao invalido")
elif(b=="lobo"):
	print("Entrada: ", b)
	print("Casa: Stark")
elif(b=="leao"):
	print("Entrada: ", b)
	print("Casa: Lannister")
elif(b=="veado"):
	print("Entrada: ", b)
	print("Casa: Baratheon")
elif(b=="dragao"):
	print("Entrada: ", b)
	print("Casa: Tararyen")
elif(b=="rosa"):
	print("Entrada: ", b)
	print("Casa: Tyrell")
elif(b=="lula"):
	print("Entrada: ", b)
	print("Casa: Greyjoy")
elif(b=="esfolado"):
	print("Entrada: ", b)
	print("Casa: Bolton")
elif(b=="turta"):
	print("Entrada: ", b)
	print("Casa: Tully")


-- OUTPUT:
Entrada:  lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 22:57:11) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Digite o nome do brasao: ").lower()

if(b != "lobo" and b != "leao" and b != "veado" and b != "dragao" and b != "rosa" and b != "sol" and b != "lula" and b != "esfolado" and b != "turta"):
	print("Entrada: ", b)
	print("Brasao invalido")
elif(b=="lobo"):
	print("Entrada: ", b)
	print("Casa: Stark")
elif(b=="leao"):
	print("Entrada: ", b)
	print("Casa: Lannister")
elif(b=="veado"):
	print("Entrada: ", b)
	print("Casa: Baratheon")
elif(b=="dragao"):
	print("Entrada: ", b)
	print("Casa: Tararyen")
elif(b=="rosa"):
	print("Entrada: ", b)
	print("Casa: Tyrell")
elif(b=="lula"):
	print("Entrada: ", b)
	print("Casa: Greyjoy")
elif(b=="esfolado"):
	print("Entrada: ", b)
	print("Casa: Bolton")
elif(b=="turta"):
	print("Entrada: ", b)
	print("Casa: Tully")


-- EXECUTION TIME:
0.141478
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa: Tararyen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 23:01:46) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Digite o nome do brasao: ").lower()

if(b != "lobo" and b != "leao" and b != "veado" and b != "dragao" and b != "rosa" and b != "sol" and b != "lula" and b != "esfolado" and b != "turta"):
	print("Entrada: ", b)
	print("Brasao invalido")
elif(b=="lobo"):
	print("Entrada: ", b)
	print("Casa: Stark")
elif(b=="leao"):
	print("Entrada: ", b)
	print("Casa: Lannister")
elif(b=="veado"):
	print("Entrada: ", b)
	print("Casa: Baratheon")
elif(b=="dragao"):
	print("Entrada: ", b)
	print("Casa: Tararyen")
elif(b=="rosa"):
	print("Entrada: ", b)
	print("Casa: Tyrell")
elif(b=="lula"):
	print("Entrada: ", b)
	print("Casa: Greyjoy")
elif(b=="esfolado"):
	print("Entrada: ", b)
	print("Casa: Bolton")
elif(b=="turta"):
	print("Entrada: ", b)
	print("Casa: Tully")


-- OUTPUT:
Entrada:  lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 23:02:21) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Digite o nome do brasao: ").lower()

if(b != "lobo" and b != "leao" and b != "veado" and b != "dragao" and b != "rosa" and b != "sol" and b != "lula" and b != "esfolado" and b != "turta"):
	print("Entrada:", b)
	print("Brasao invalido")
elif(b=="lobo"):
	print("Entrada:", b)
	print("Casa: Stark")
elif(b=="leao"):
	print("Entrada:", b)
	print("Casa: Lannister")
elif(b=="veado"):
	print("Entrada:", b)
	print("Casa: Baratheon")
elif(b=="dragao"):
	print("Entrada:", b)
	print("Casa: Tararyen")
elif(b=="rosa"):
	print("Entrada:", b)
	print("Casa: Tyrell")
elif(b=="lula"):
	print("Entrada:", b)
	print("Casa: Greyjoy")
elif(b=="esfolado"):
	print("Entrada:", b)
	print("Casa: Bolton")
elif(b=="turta"):
	print("Entrada:", b)
	print("Casa: Tully")


-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 23:02:33) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Digite o nome do brasao: ").lower()

if(b != "lobo" and b != "leao" and b != "veado" and b != "dragao" and b != "rosa" and b != "sol" and b != "lula" and b != "esfolado" and b != "turta"):
	print("Entrada:", b)
	print("Brasao invalido")
elif(b=="lobo"):
	print("Entrada:", b)
	print("Casa: Stark")
elif(b=="leao"):
	print("Entrada:", b)
	print("Casa: Lannister")
elif(b=="veado"):
	print("Entrada:", b)
	print("Casa: Baratheon")
elif(b=="dragao"):
	print("Entrada:", b)
	print("Casa: Tararyen")
elif(b=="rosa"):
	print("Entrada:", b)
	print("Casa: Tyrell")
elif(b=="lula"):
	print("Entrada:", b)
	print("Casa: Greyjoy")
elif(b=="esfolado"):
	print("Entrada:", b)
	print("Casa: Bolton")
elif(b=="turta"):
	print("Entrada:", b)
	print("Casa: Tully")


-- EXECUTION TIME:
0.152233
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Tararyen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 23:02:46) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Digite o nome do brasao: ")

if(b != "lobo" and b != "leao" and b != "veado" and b != "dragao" and b != "rosa" and b != "sol" and b != "lula" and b != "esfolado" and b != "turta"):
	print("Entrada:", b)
	print("Brasao invalido")
elif(b=="lobo"):
	print("Entrada:", b)
	print("Casa: Stark")
elif(b=="leao"):
	print("Entrada:", b)
	print("Casa: Lannister")
elif(b=="veado"):
	print("Entrada:", b)
	print("Casa: Baratheon")
elif(b=="dragao"):
	print("Entrada:", b)
	print("Casa: Tararyen")
elif(b=="rosa"):
	print("Entrada:", b)
	print("Casa: Tyrell")
elif(b=="lula"):
	print("Entrada:", b)
	print("Casa: Greyjoy")
elif(b=="esfolado"):
	print("Entrada:", b)
	print("Casa: Bolton")
elif(b=="turta"):
	print("Entrada:", b)
	print("Casa: Tully")


-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 23:02:54) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Digite o nome do brasao: ")

if(b != "lobo" and b != "leao" and b != "veado" and b != "dragao" and b != "rosa" and b != "sol" and b != "lula" and b != "esfolado" and b != "turta"):
	print("Entrada:", b)
	print("Brasao invalido")
elif(b=="lobo"):
	print("Entrada:", b)
	print("Casa: Stark")
elif(b=="leao"):
	print("Entrada:", b)
	print("Casa: Lannister")
elif(b=="veado"):
	print("Entrada:", b)
	print("Casa: Baratheon")
elif(b=="dragao"):
	print("Entrada:", b)
	print("Casa: Tararyen")
elif(b=="rosa"):
	print("Entrada:", b)
	print("Casa: Tyrell")
elif(b=="lula"):
	print("Entrada:", b)
	print("Casa: Greyjoy")
elif(b=="esfolado"):
	print("Entrada:", b)
	print("Casa: Bolton")
elif(b=="turta"):
	print("Entrada:", b)
	print("Casa: Tully")


-- EXECUTION TIME:
0.125372
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Tararyen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 23:06:24) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Digite o nome do brasao: ").lower()

if(b != "lobo" and b != "leao" and b != "veado" and b != "dragao" and b != "rosa" and b != "sol" and b != "lula" and b != "esfolado" and b != "turta"):
	print("Entrada:", b)
	print("Brasao invalido")
elif(b=="lobo"):
	print("Entrada:", b)
	print("Casa: Stark")
elif(b=="leao"):
	print("Entrada:", b)
	print("Casa: Lannister")
elif(b=="veado"):
	print("Entrada:", b)
	print("Casa: Baratheon")
elif(b=="dragao"):
	print("Entrada:", b)
	print("Casa: Targaryen")
elif(b=="rosa"):
	print("Entrada:", b)
	print("Casa: Tyrell")
elif(b=="lula"):
	print("Entrada:", b)
	print("Casa: Greyjoy")
elif(b=="esfolado"):
	print("Entrada:", b)
	print("Casa: Bolton")
elif(b=="turta"):
	print("Entrada:", b)
	print("Casa: Tully")
elif(b=="sol"):
	print("Entrada: ", b)
	print("Casa: Martell")


-- EXECUTION TIME:
0.129752
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 00:03:11) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Digite o nome do brasao: ").lower()

if(b != "lobo" and b != "leao" and b != "veado" and b != "dragao" and b != "rosa" and b != "sol" and b != "lula" and b != "esfolado" and b != "turta"):
	print("Entrada:", b)
	print("Brasao invalido")
elif(b=="lobo"):
	print("Entrada:", b)
	print("Casa: Stark")
elif(b=="leao"):
	print("Entrada:", b)
	print("Casa: Lannister")
elif(b=="veado"):
	print("Entrada:", b)
	print("Casa: Baratheon")
elif(b=="dragao"):
	print("Entrada:", b)
	print("Casa: Targaryen")
elif(b=="rosa"):
	print("Entrada:", b)
	print("Casa: Tyrell")
elif(b=="lula"):
	print("Entrada:", b)
	print("Casa: Greyjoy")
elif(b=="esfolado"):
	print("Entrada:", b)
	print("Casa: Bolton")
elif(b=="turta"):
	print("Entrada:", b)
	print("Casa: Tully")
elif(b=="sol"):
	print("Entrada: ", b)
	print("Casa: Martell")


-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
